# agent-competition

./: SPEC.md
.claude/: settings.local.json
backend/: .gitignore  init_db.py  main.py  pyproject.toml
backend/app/api/: __init__.py  agent_center.py  auth.py  contents.py  event_channels.py  logs.py  media.py  messages.py  permissions.py  reviews.py  settings.py  teams.py  users.py  votes.py  webhooks.py  works.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  content.py  event_channel.py  message.py  permission.py  setting.py  team.py  user.py  webhook.py  work.py
backend/app/schemas/: common.py  content.py  event_channel.py  message.py  team.py  work.py
backend/app/services/: __init__.py  notification_service.py  webhook.py
backend/migrations/: 001_create_copyright_agreements.sql
backend/src/events/: __init__.py  base.py  registry.py  wecom_bot.py
backend/tests/: simple_webhook.py
docs/superpowers/plans/: 2026-06-10-copyright-agreement-admin-plan.md
docs/superpowers/specs/: 2026-06-10-copyright-agreement-admin-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: competition.html
frontend/public/onlyoffice-web-local/: index.html
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: index.ts
frontend/src/components/: Dialog.vue  (+6 more)
plans/: wondrous-munching-wind.md
reference-frontend/: .env  .env.development  .env.production  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
reference-frontend/src/: App.vue  main.js
(+52 files in other folders)
