[project]
name = "agent-competition-backend"
version = "0.1.0"
description = "智能体大赛网站后端"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.3",
    "alembic>=1.13.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.9",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "markdown>=3.5.0",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "volcengine>=1.0.221",
    "openpyxl>=3.1.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["app.tests*"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
